crates/axiom-macros/tests/compile-fail/cf-cross-layer-call.stderr
warning: unused import: `CellContext`
 --> tests/compile-fail/cf-cross-layer-call.rs:3:27
  |
3 | use axiom_core::context::{CellContext, LayeredCellContext};
  |                           ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ExecLayer: CanSendTo<AgentLayer>` is not satisfied
  --> tests/compile-fail/cf-cross-layer-call.rs:48:17
   |
48 |             ctx.send_to::<AgentLayer, _>(signal, "agent-cell").unwrap();
   |                 ^^^^^^^ the trait `CanSendTo<AgentLayer>` is not implemented for `ExecLayer`
   |
help: the trait `CanSendTo<AgentLayer>` is not implemented for `ExecLayer`
      but trait `CanSendTo<ExecLayer>` is implemented for it
  --> $WORKSPACE/crates/axiom-core/src/sealed.rs
   |
   | impl CanSendTo<ExecLayer> for ExecLayer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `ExecLayer`, found `AgentLayer`
note: required by a bound in `LayeredCellContext::<'a, L>::send_to`
  --> $WORKSPACE/crates/axiom-core/src/context.rs
   |
   |     pub fn send_to<Target: LayerMarker, S: Signal>(
   |            ------- required by a bound in this associated function
...
   |         L: CanSendTo<Target>,
   |            ^^^^^^^^^^^^^^^^^ required by this bound in `LayeredCellContext::<'a, L>::send_to`
